# larix

./: .travis.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conda_install.sh  environment.yml  run.sh  travis_bckp.yml  upload.sh
.github/workflows/: linux.yml  ubuntu.yml
code/: Ctypes_wrap.py  DataI23Proc.py
code/c_function/: Makefile  flatsreg_core.c
data/: sample13076_2D.npy  sino_denoiseCPU.npy  sino_denoiseCPU_uint16.npy  sino_noisy.npy  sino_noisy_uint16.npy  sino_stripe_i12.npy  sino_stripes_crop3D.npy
demos/: ActiveCountSegm.py  DemoAutoCrop.py  DemoDezing.py  DemoInpainters.py  DemoInpainters2.py  DemoSegm2D.py  DemoSegm3D.py  EdgeDetection.py  SegmPipeline.py  geo_dist.py  i23_Segmentation.py  i23_Segmentation3D.py  i23_Segmentation_Distance.py  i23data_rec13062.py  i23data_rec13068.py  i23data_rec13068_3D.py  i23data_rec13076.py  i23data_rec13076_3D.py  i23data_rec13282.py  i23data_rec13551_3D.py  i23data_rec13553_3D.py  upd_mask.npy
demos/i23scripts/: segm_comparison.py  segm_comparison13076.py  segm_comparison13284.py
recipe/: bld.bat  build.sh  conda_build_config.yaml  conda_upload.sh  meta.yaml  upload.sh
scripts/: conda_upload.sh
src/: CMakeLists.txt
src/Core/: CMakeLists.txt  DLSDefines.h
src/Core/CPU_modules/: DiffusionMASK_core.h  Diffusion_Inpaint_core.c  Diffusion_Inpaint_core.h  Inpaint_simple_core.c  Inpaint_simple_core.h  MASK_merge_core.c  MASK_merge_core.h  MaskIterative_core.c  MaskIterative_core.h  MedianFilt_core.c  MedianFilt_core.h  NonlocalMarching_Inpaint_core.c  NonlocalMarching_Inpaint_core.h  Stripes_detect_core.c  Stripes_detect_core.h  autocropper_core.c  autocropper_core.h  utils.c  utils.h
src/Core/GPU_modules/: MedianFilt_GPU_core.cu  MedianFilt_GPU_core.h  MedianFilt_shared_GPU_core.cu  MedianFilt_shared_GPU_core.h  shared.h  stream_arithmetic.h
src/Core/functions_CPU/: DetEdge_core.c  DetEdge_core.h  DiffusionMASK_core.c  MASK_merge_core.c  MASK_merge_core.h  MaskIterative_core.c  MaskIterative_core.h  autocropper_core.c  autocropper_core.h  chan_vese_core.c  chan_vese_core.h  utils.c  utils.h
src/Python/: CMakeLists.txt  setup-colleda.py.in  setup-dipols.py.in  setup-i23seg.py.in  setup-larix.py.in
src/Python/i23/methods/: segmentation.py
src/Python/src/: cpu_misc.pyx  cpu_segmentation.pyx  gpu_misc.pyx
tests/: build_testing.py  build_testing_3d.py  build_testing_3d_gener.py  build_testing_3d_phantom.py  test.py  test_larix.py
